--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,9 +5,9 @@
 {% block header %}Welcome{% endblock %}
 
 {% block content %}
-<div class="bg-gray-100 shadow overflow-hidden sm:rounded-lg p-6">
-    <p class="text-gray-700 mb-4">
-        Hello World.
+<div class="bg-blue-500 shadow overflow-hidden sm:rounded-lg p-6">
+    <p class="text-white mb-4">
+        Curabitur tincidunt, felis a elementum tincidunt, ex felis fermentum dui, eget pulvinar arcu eros eu eros. Vestibulum sollicitudin pretium velit, eget volutpat justo fermentum sit amet. Pellentesque in nulla in nisi dictum interdum..
     </p>
     <button class="bg-blue-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">
         Learn More
