--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     </main>
     {% block javascript %}
     <script src="{% static 'js/script.js' %}"></script>
+    <script src="../node_modules/flyonui/flyonui.js"></script>
     {% endblock %}
 </body>
 </html>
