--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Hackathon{% endblock %}</title>
+
     {% tailwind_css %}
+
+    {% block extra_css %}{% endblock %}
+
 </head>
 <body class="bg-gray-500 min-h-screen">
     <main>
