url for register setup on nav bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
           <a href="#" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Logout</a>
         {% else %}
           <a href="#" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Login</a>
-          <a href="#" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Register</a>
+          <a href="{% url 'register' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Register</a>
         {% endif %}
       </nav>
     </div>
