--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,13 @@
     </div>
   </main>
 
+  <footer class="footer footer-center bg-[#000080] text-white border-t border-gray-300 shadow-md px-6 py-4 font-mono text-sm">
+    <aside>
+      <p>Copyright &copy; 404 Gender Gap Not Found - Since 1900 - All rights reserved.</p>
+    </aside>
+  </footer>
+
+
   {% block javascript %}
     <script src="{% static 'js/script.js' %}"></script>
     <script src="{% static 'js/flyonui.js' %}"></script>
