--- a/timeline/templates/timeline/timeline.html
+++ b/timeline/templates/timeline/timeline.html
@@ -12,35 +12,35 @@
     {% for event in events %}
     <li{% if forloop.counter|divisibleby:2 %} class="timeline-shift"{% endif %}>
         <div class="timeline-middle h-16">
-            <span class="bg-primary/20 flex size-8 items-center justify-center rounded-full">
-                <span class="icon-[tabler--point] text-primary size-5"></span>
+            <span class="/20 flex size-8 items-center justify-center rounded-full">
+                <span class="icon-[tabler--school] text-black-700 size-20"></span>
             </span>
         </div>
         {% if forloop.counter|divisibleby:2 %}
         <div class="timeline-end mt-6 px-1 md:mt-8">
-            <div class="text-white text-sm font-normal">{{ event.year }}</div>
+            <div class="text-black-700 text-xl font-normal">{{ event.year }}</div>
         </div>
         <div class="timeline-start me-4 mb-8 w-full">
         {% else %}
         <div class="timeline-start me-4 mt-8 max-md:pt-2">
-            <div class="text-white text-sm font-normal">{{ event.year }}</div>
+            <div class="text-black-700 text-xl font-normal"">{{ event.year }}</div>
         </div>
         <div class="timeline-end ms-4 mb-8">
         {% endif %}
-            <div class="card">
-                <div class="card-body gap-4">
+            <div class="card sm:card-side max-w-sm sm:max-w-full">
+                <div class="card-body gap-2">
                     <!--Image -->
                     {% if event.image %}
                     <div class="card-image w-full">
-                        <img src="{{ event.image.url }}" alt="{{ event.event }}" class="rounded-lg w-full">
+                        <img src="{{ event.image.url }}" alt="{{ event.event }}" class="h-40">
                     </div>
                     {% endif %}
 
                     <!--Title -->
-                    <h5 class="card-title text-lg">{{ event.event }}</h5>
+                    <h5 class="card-title mb-2.5">{{ event.event }}</h5>
 
                     <!--Description-->
-                    <p>{{ event.description }}</p>
+                    <p class="mb-3">{{ event.description }}</p>
 
                     <!--Honour button-->
                     <div class="honour-container flex justify-start mt-2">
@@ -49,9 +49,9 @@
                                 data-honour-count="{{ event.honour_count }}">
                             <!-- Heart icon: filled if honoured -->
                             {% if event.user_has_honoured %}
-                            <span class="icon-[tabler--heart-filled] size-5"></span>
+                            <span class="icon-[tabler--mug-filled] size-5"></span>
                             {% else %}
-                            <span class="icon-[tabler--heart] size-5"></span>
+                            <span class="icon-[tabler--mug] size-5"></span>
                             {% endif %}
                             <span class="honour-count">{{ event.honour_count }}</span>
                         </button>
