removed timelines.css

--- a/timeline/templates/timeline/timeline.html
+++ b/timeline/templates/timeline/timeline.html
@@ -40,7 +40,7 @@
                     <h5 class="card-title mb-2.5">{{ event.event }}</h5>
 
                     <!--Description-->
-                    <p class="mb-3">{{ event.description }}</p>
+                    <p>{{ event.description }}</p>
 
                     <!--Honour button-->
                     <div class="honour-container flex justify-start mt-2">
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </div>
-        <hr />
+        <hr class="bg-black"/>
     </li>
     {% endfor %}
 </ul>
