Add account templates

--- a/timeline/templates/timeline/timeline.html
+++ b/timeline/templates/timeline/timeline.html
@@ -49,9 +49,9 @@
                                 data-honour-count="{{ event.honour_count }}">
                             <!-- Heart icon: filled if honoured -->
                             {% if event.user_has_honoured %}
-                            <span class="icon-[tabler--mug-filled] size-5"></span>
+                            <span class="icon-[tabler--heart-filled] size-5"></span>
                             {% else %}
-                            <span class="icon-[tabler--mug] size-5"></span>
+                            <span class="icon-[tabler--heart] size-5"></span>
                             {% endif %}
                             <span class="honour-count">{{ event.honour_count }}</span>
                         </button>
