--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://unpkg.com/98.css/dist/98.css" />
   {% block extra_css %}{% endblock %}
 </head>
-<body class="bg-stone-300/80 min-h-screen flex flex-col {% if user.is_authenticated %}user-logged-in{% endif %}">
+<body class="bg-stone-300/80 min-h-screen flex flex-col font-serif {% if user.is_authenticated %}user-logged-in{% endif %}">
   <!-- Navigation Bar -->
   <header class="bg-gray-800 text-white">
     <div class="max-w-7xl mx-auto flex items-center justify-between p-4">
