--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
       <!-- Navigation Links in separate boxes -->
       <nav class="flex space-x-4">
         <a href="{% url 'home' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Home</a>
+        <a href="{% url 'about' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">About Us</a>
         <a href="{% url 'timeline' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Timeline</a>
         {% if user.is_authenticated %}
           <a href="{% url 'account_logout' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Logout</a>
