re-inistalise my workspace

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
         <p>This is the home page of the Hackathon project. It is a simple Django project that demonstrates how to build a web application using Django and Tailwind CSS.</p>
     </div>
     
-    <!-- Right column with timeline content -->
+    <!-- timeline content -->
     <div class="md:w-1/2 flex flex-col">
         <h2 class="text-2xl font-bold mb-4">Timeline Events</h2>
         
