--- a/templates/403.html
+++ b/templates/403.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <section class="flex justify-center items-center min-h-screen">
-    <div class="text-center text-white">
+    <div class="text-center text-black">
         <h1 class="text-5xl font-bold">Access Denied!!
         <h2 class="text-4xl my-4">403</h2>
         <h3 class="text-2xl mb-4">Forbidden</h3>
