--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -48,7 +48,7 @@
             {% for member in members %}
             <div class="bg-white border-2 border-black p-4">
                 {% if member.image %}
-                <img src="{% static member.image %}" alt="{{ member.name }}" class="w-40 h-40 object-cover border border-black mb-4">
+                <img src="{% static member.image %}" alt="{{ member.name }}" class="w-40 h-40 border border-black mb-4">
                 {% endif %}
                 <h3 class="text-xl font-bold">{{ member.name }}</h3>
                 <p class="text-gray-700 font-semibold">{{ member.role }}</p>
@@ -56,7 +56,7 @@
                 
                 <!-- GitHub Link -->
                 {% if member.github %}
-                <p class="mt-2 flex justify-around">
+                <p class="mt-5 flex justify-around">
                     <a href="{{ member.github }}" target="_blank" class="w-1/3 px-4 py-2 text-lg border border-black bg-blue-600 text-white hover:bg-blue-700 transition duration-300 inline-block">
                         GitHub
                     </a>
