--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -48,7 +48,7 @@
             {% for member in members %}
             <div class="bg-white border-2 border-black p-4">
                 {% if member.image %}
-                <img src="{% static member.image %}" alt="{{ member.name }}" class="w-40 h-40 border border-black mb-4">
+                <img src="{% static member.image %}" alt="{{ member.name }}" class="w-40 border border-black mb-4">
                 {% endif %}
                 <h3 class="text-xl font-bold">{{ member.name }}</h3>
                 <p class="text-gray-700 font-semibold">{{ member.role }}</p>
