--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,17 +16,17 @@
     
     <!-- Right column with timeline content -->
     <div class="md:w-1/2 flex flex-col">
-        <h2 class="text-2xl font-bold mb-4">Timeline Events</h2>
         
         <ul>
         {% for event in timeline_events %}
-        <li class="border p-4 rounded-lg shadow">
-            <h3 class="font-semibold text-lg">{{ event.event }}</h3>
-            <div class="text-sm text-gray-500">{{ event.year }}</div>
-            <p class="mt-2">{{ event.description }}</p>
-            {% if event.image %}
-                <img src="{{ event.image.url }}" alt="{{ event.event }}" class="h-40 border border-black mt-2">
-            {% endif %}
+        <li class="border-2 p-4 border-black mb-3">
+            <div class="text-2xl font-bold text-black flex justify-center pb-2">{{ event.year }}</div>
+            <div class="flex justify-around">
+                <h3 class="font-semibold text-lg">{{ event.event }}</h3>
+                {% if event.image %}
+                    <img src="{{ event.image.url }}" alt="{{ event.event }}" class="h-40 border border-black mt-2">
+                {% endif %}
+            </div>
             
             <!-- Honour button -->
             {% if user.is_authenticated %}
@@ -42,7 +42,7 @@
                     </button>
                 </div>
             {% else %}
-                <div class="mt-3 flex items-center text-sm text-gray-500">
+                <div class="mt-3 flex items-center text-sm text-black">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"></svg>
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
                     </svg>
