--- a/templates/base.html
+++ b/templates/base.html
@@ -27,10 +27,10 @@
 
       <!-- Horizontal Nav (hidden on mobile, shown on md+) -->
       <nav class="hidden md:flex space-x-4">
-        <a href="{% url 'home' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Home</a>
-        <a href="{% url 'about' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">About Us</a>
+        <a href="{% url 'home' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Home</a>        
         <a href="{% url 'timeline' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Timeline</a>
         <a href="{% url 'mentors:mentor_list' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Mentors</a>
+        <a href="{% url 'about' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Team</a>
         {% if user.is_authenticated %}
           <a href="{% url 'account_logout' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Logout</a>
           <a href="{% url 'account_change_password' %}" class="px-4 py-2 border border-gray-700 rounded-md hover:text-gray-300">Change Password</a>
@@ -53,9 +53,10 @@
         <!-- Dropdown menu -->
         <div id="navbar-dropdown"
              class="hidden absolute right-0 mt-2 w-48 bg-white text-black border border-gray-200 rounded-md shadow-lg z-10">
-          <a href="{% url 'home' %}" class="block px-4 py-2 hover:bg-gray-100">Home</a>
-          <a href="{% url 'about' %}" class="block px-4 py-2 hover:bg-gray-100">About Us</a>
+          <a href="{% url 'home' %}" class="block px-4 py-2 hover:bg-gray-100">Home</a>          
           <a href="{% url 'timeline' %}" class="block px-4 py-2 hover:bg-gray-100">Timeline</a>
+          <a href="{% url 'mentors:mentor_list' %}" class="block px-4 py-2 hover:bg-gray-100">Mentors</a>
+          <a href="{% url 'about' %}" class="block px-4 py-2 hover:bg-gray-100">Team</a>
           {% if user.is_authenticated %}
             <a href="{% url 'account_logout' %}" class="block px-4 py-2 hover:bg-gray-100">Logout</a>
             <a href="{% url 'account_change_password' %}" class="block px-4 py-2 hover:bg-gray-100">Change Password</a>
