Update GitHub link styling in about page

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -57,7 +57,7 @@
 
                 <!-- GitHub Link -->
                 {% if member.github %}
-                <p class="mt-5 flex justify-around">
+                <p class="mt-5 flex justify-between">
                     <a href="{{ member.github }}" target="_blank" class="w-1/3 px-4 py-2 text-lg border border-black bg-blue-600 text-white hover:bg-blue-700 transition duration-300 inline-block">
                         GitHub
                     </a>
