--- a/mentors/templates/mentors/mentors.html
+++ b/mentors/templates/mentors/mentors.html
@@ -67,6 +67,7 @@
         {% empty %}
         <div class="col-span-full text-center">
             <p>No mentors available at the moment. Please check back later.</p>
+            <img src="https://slack-imgs.com/?c=1&o1=ro&url=https%3A%2F%2Fmedia.tenor.com%2F7nbpMQwEGC8AAAAM%2Fclippy-microsoft.gif" alt="Clippy Microsoft Office Assistant" class="mx-auto mt-6">
         </div>
         {% endfor %}
     </div>
