--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,8 +10,12 @@
 <div class="container mx-auto flex flex-col md:flex-row gap-6">
     <!-- Left column content -->
     <div class="md:w-1/2">
-        <h1 class="text-3xl font-bold mb-4">Welcome to the Home Page</h1>
-        <p>This is the home page of the Hackathon project. It is a simple Django project that demonstrates how to build a web application using Django and Tailwind CSS.</p>
+        {% load static %}
+            <img src="{% static 'images/clippy.webp' %}" alt="Clippy Microsoft Office Assistant" class="w-auto mx-auto p-4">
+
+            <h1 class="text-3xl font-bold mb-4">Welcome to the Home Page</h1>
+
+        <p class="text-lg">This is the home page of the Hackathon project. It is a simple Django project that demonstrates how to build a web application using Django and Tailwind CSS.</p>
     </div>
     
     <!-- Right column with timeline content -->
