--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,9 +13,17 @@
         {% load static %}
             <img src="{% static 'images/clippy.webp' %}" alt="Clippy Microsoft Office Assistant" class="w-auto mx-auto p-4">
 
-            <h1 class="text-3xl font-bold mb-4">Welcome to the Home Page</h1>
+            <h1 class="text-xl font-bold mb-4">404: Gender Gap Not Found - Inspiring Women in Tech</h1>
 
-        <p class="text-lg">This is the home page of the Hackathon project. It is a simple Django project that demonstrates how to build a web application using Django and Tailwind CSS.</p>
+        <p class="text-lg">
+          Our web app is designed to inspire the next generation of tech innovators by sharing the stories of women pioneers in technology. We aim to break barriers, close gender gaps, and build a diverse and inclusive tech community.
+        </p>
+        <h3 class="text-xl font-semibold mt-2">What We Do</h3>
+        <ul class="list-disc list-inside mb-4">
+          <li>Showcase the achievements of women in tech in timeline.</li>
+          <li>Provide valuable tech tips to empower women in their careers.</li>
+          <li>Bridge the mentorship gap by connecting mentees with experienced mentors.</li>
+        </ul>
     </div>
 
     <!-- Right column with timeline content -->
